--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="#960000"
-        android:endColor="#000000"
+        android:angle="180"
+        android:centerColor="#FF0000"
+        android:endColor="#1B1A1A"
         android:startColor="#FF0000"
         android:type="linear" />
 </shape>
