--- a/app/src/main/res/layout/question_holder.xml
+++ b/app/src/main/res/layout/question_holder.xml
@@ -12,7 +12,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="TextView"
+        android:fontFamily="sans-serif"
+        android:text="კითხვა / question"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
