--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,13 +23,14 @@
     <include layout="@layout/content_main" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        app:layout_behavior="com.example.ipolitician.recycler.SubmitFloatLayout"
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:background="@drawable/checked"
+        android:src="@drawable/check"
         android:visibility="invisible"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:layout_behavior="com.example.ipolitician.recycler.SubmitFloatLayout" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
