--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,32 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_city_hall"
+            android:icon="@drawable/ic_population"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_survey"
+            android:icon="@drawable/checking"
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/cv"
             android:title="@string/menu_slideshow" />
     </group>
+
+    <item android:title="App Features">
+        <menu>
+            <item
+                android:id="@+id/nav_vote"
+                android:icon="@drawable/vote"
+                android:title="Vote" />
+            <item
+                android:id="@+id/nav_problems"
+                android:icon="@drawable/newspaper"
+                android:title="Problems" />
+            <item
+                android:id="@+id/nav_vocab"
+                android:icon="@drawable/book"
+                android:title="Vocabulary" />
+        </menu>
+    </item>
 </menu>
