--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/design_default_color_background"
-    tools:context=".ui.profile.ProfileFragment">
+    tools:context=".nav.profile.ProfileFragment">
 
     <ImageView
         android:id="@+id/imageView2"
