--- a/app/src/main/res/layout/fragment_public.xml
+++ b/app/src/main/res/layout/fragment_public.xml
@@ -5,7 +5,7 @@
     android:id="@+id/home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.publics.PublicFragment">
+    tools:context=".nav.publics.PublicFragment">
 
     <TextView
         android:id="@+id/text_home"
