--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/nav_home">
+    app:startDestination="@id/nav_public">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.ipolitician.ui.publics.PublicFragment"
+        android:id="@+id/nav_public"
+        android:name="com.example.ipolitician.nav.publics.PublicFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_public" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.ipolitician.ui.survey.SurveyFragment"
+        android:id="@+id/nav_survey"
+        android:name="com.example.ipolitician.nav.survey.SurveyFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_survey" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.ipolitician.ui.profile.ProfileFragment"
+        android:id="@+id/nav_profile"
+        android:name="com.example.ipolitician.nav.profile.ProfileFragment"
         android:label="@string/menu_slideshow"
+        tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/nav_problems"
+        android:name="com.example.ipolitician.nav.problems.ProblemsFragment"
         tools:layout="@layout/fragment_profile" />
 </navigation>
