--- a/app/src/main/res/layout/problem_holder.xml
+++ b/app/src/main/res/layout/problem_holder.xml
@@ -25,7 +25,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/design_default_color_secondary_variant"
         android:drawableLeft="@drawable/ic_up_arrow"
         android:padding="8dp"
         android:text="0"
@@ -40,13 +40,14 @@
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/design_default_color_secondary_variant"
         android:drawableLeft="@drawable/ic_down_arrow"
         android:padding="8dp"
         android:text="0"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/votes"
         app:layout_constraintStart_toEndOf="@+id/up_vote"
         app:layout_constraintTop_toBottomOf="@+id/problem" />
 
@@ -56,7 +57,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/design_default_color_secondary_variant"
         android:padding="8dp"
         android:text="VOTES: 0"
         android:textAlignment="center"
