--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,5 +26,6 @@
     <fragment
         android:id="@+id/nav_problems"
         android:name="com.example.ipolitician.nav.problems.ProblemsFragment"
+        android:label="Problems"
         tools:layout="@layout/fragment_profile" />
 </navigation>
