--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:text="Tell a little bit about yourself"
-        android:textSize="15sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,9 +80,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="32dp"
         android:background="@color/colorPrimary"
-        android:fontFamily="cursive"
+        android:fontFamily="sans-serif"
         android:text="Save"
         android:textColor="#000000"
         android:textSize="24sp"
