--- a/app/src/main/res/layout/fragment_public.xml
+++ b/app/src/main/res/layout/fragment_public.xml
@@ -20,18 +20,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <com.anychart.AnyChartView
-                android:id="@+id/any_chart_view"
+<!--            <com.anychart.AnyChartView-->
+<!--                android:id="@+id/any_chart_view"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="350dp">-->
+<!--            </com.anychart.AnyChartView>-->
+
+            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
+                android:id="@+id/aa_chart_view"
                 android:layout_width="match_parent"
                 android:layout_height="350dp">
-
-            </com.anychart.AnyChartView>
+            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Filters" />
+                android:layout_marginStart="16dp"
+                android:text="Age"
+                android:textColor="@color/design_default_color_on_secondary"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spinner4"
@@ -39,13 +48,33 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp" />
 
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Gender"
+                android:textColor="@color/design_default_color_on_secondary"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
             <Spinner
                 android:id="@+id/spinner5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp" />
 
-<!--            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView-->
+            <Button
+                android:id="@+id/filterBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/corner_radius"
+                android:text="FILTER"
+                android:textSize="18sp" />
+
+            <!--            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView-->
 <!--                android:id="@+id/aa_chart_view2"-->
 <!--                android:layout_width="match_parent"-->
 <!--                android:layout_height="350dp">-->
