--- a/app/src/main/res/layout/problem_holder.xml
+++ b/app/src/main/res/layout/problem_holder.xml
@@ -21,7 +21,7 @@
 
     <Button
         android:id="@+id/up_vote"
-        android:layout_width="120dp"
+        android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -51,7 +51,7 @@
         app:layout_constraintStart_toEndOf="@+id/up_vote"
         app:layout_constraintTop_toBottomOf="@+id/problem" />
 
-    <TextView
+    <Button
         android:id="@+id/votes"
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -60,7 +60,7 @@
         android:background="@color/design_default_color_secondary_variant"
         android:padding="8dp"
         android:text="VOTES: 0"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="#FF9800"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
