Problems Page working / need synch

--- a/app/src/main/res/layout/problem_holder.xml
+++ b/app/src/main/res/layout/problem_holder.xml
@@ -6,18 +6,28 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/breakline"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="12dp"
+        android:background="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/problem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="some problem here"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/breakline" />
 
     <Button
         android:id="@+id/up_vote"
@@ -67,15 +77,4 @@
         app:layout_constraintStart_toEndOf="@+id/down_vote"
         app:layout_constraintTop_toBottomOf="@+id/problem" />
 
-    <TextView
-        android:id="@+id/breakline"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/votes" />
 </androidx.constraintlayout.widget.ConstraintLayout>
